--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="author" content="Andrea Moulding">
     <meta name="description" content="Predictive Marketing Audiences for Better Personalized Marketing - Lytics">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--css links -->
+    <link rel="stylesheet" href="main.css">
 
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
