--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <li><a href="audiences.html">Audiences</a></li>
         <li><a href="intergrations.html">Intergrations</a></li>
         <li><a hreg="">Alert</a></li>
-        <li><a href="aquisition.html">Acquisition</a></li>
+        <li class="dropdown"><a href="aquisition.html">Acquisition</a></li>
           <div>
-            <ul>
+            <ul class="dropnav">
               <li>What is your current objective?</li>
               <li><a href="aquisition.html">Acquisition</a></li>
               <li><a href="aquisition.html#activation">Activation</a></li>
