--- a/index.html
+++ b/index.html
@@ -16,25 +16,24 @@
 
   <!--navigation -->
     <nav>
-      <header class "main">
+      <header class="main">
         <a class="logo" href="index.html">Logo</a>
         <ul class="leftnav">
           <li><a href="audiences.html">Audiences</a></li>
           <li><a href="intergrations.html">Intergrations</a></li>
         </ul>
         <ul class="rightnav">
-          <li><a hreg="">Alert</a></li>
+          <li><a href="">Alert</a></li>
           <li class="dropdown">
             <a href="aquisition.html">Acquisition</a>
               <ul class="drop-nav">
-                <li>What is your current objective?</li>
+                <li class="drop-down-text">What is your current objective?</li>
                 <li><a href="aquisition.html">Acquisition</a></li>
                 <li><a href="aquisition.html#activation">Activation</a></li>
                 <li><a href="aquisition.html#retention">Retention</a></li>
               </ul>
            </li>
-          <li><a hreg="user.html">User</a></li>
+          <li><a href="user.html">User</a></li>
         </ul>
       </header>
     </nav>
-  
