updated drop down

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <ul class="rightnav">
           <li><a href="">Alert</a></li>
           <li class="dropdown">
-            <a href="aquisition.html">Acquisition</a>
+            <a href="objective.html">Objective</a>
               <ul class="drop-nav">
                 <li class="drop-down-text">What is your current objective?</li>
-                <li><a href="aquisition.html">Acquisition</a></li>
-                <li><a href="aquisition.html#activation">Activation</a></li>
-                <li><a href="aquisition.html#retention">Retention</a></li>
+                <li><a href="objective.html#acquisition">Acquisition</a></li>
+                <li><a href="objective.html#activation">Activation</a></li>
+                <li><a href="objective.html.html#retention">Retention</a></li>
               </ul>
            </li>
           <li><a href="user.html">User</a></li>
