--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Predictive Marketing Audiences for Better Personalized Marketing - Lytics</title>
+    <title>Better Personalized Marketing</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="author" content="Andrea Moulding">
-    <meta name="description" content="Predictive Marketing Audiences for Better Personalized Marketing - Lytics">
+    <meta name="description" content="Better Personalized Marketing">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--css links -->
     <link rel="stylesheet" href="main.css">
