--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="intergrations.html">Intergrations</a></li>
         </ul>
         <ul class="rightnav">
-          <li><a href="">Alert</a></li>
+          <li><a href="user.html#notifications">Alert</a></li>
           <li class="dropdown">
             <a href="objective.html">Objective</a>
               <ul class="drop-nav">
